# echo

./: README.md  pyproject.toml  shell.nix
echo/: database.py  dataset.py  new_database.py  new_dataset.py  nlg_service.py
echo/utils/: embedder.py  mqtt_messages.py  mqtt_node.py  summariser.py
resources/: dataset.json
resources/example_dataset/: dataset.json
scripts/: cli_mvp.py  conversion.py  database.ipynb  docs.csv  test.py  test2.ipynb  test3.ipynb  tests.ipynb
scripts/data/sample-lancedb-nested/documents.lance/_transactions/: 0-31c216fd-97f8-4965-8492-52d1897aacca.txn  1-c0c92939-8b37-4563-aed4-445bf336144a.txn
scripts/data/sample-lancedb-nested/documents.lance/data/: 9c0aae0d-3407-45fb-8387-571f88f21700.lance
